# MyAiInfer

./: CMakeLists.txt  README.md
include/: head.h
myInfer/include/base/: base.h
myInfer/source/base/: base.cpp
src/: add.cpp  main.cpp  sub.cpp
